# Masters-Project

./: .gitignore  README.md  ply_data_location.txt
top_down_test/: CMakeLists.txt  arguments.txt  draw_object.cpp  extract_features.cpp  grid_datastructure.cpp  main_prog.cpp  output.txt  point_cloud_voxelization.cpp  point_res.cpp  prune_tree.cpp  rmse.cpp  split_driver.cpp  top_down_split.cpp  training_data.csv  unitcube_sampled.ply  voxelization_grid.cpp
top_down_train/: CMakeLists.txt  arguments.txt  aspect_training.txt  block.hpp  draw.cpp  draw_helper.cpp  draw_object.cpp  draw_object_helper.cpp  extract_features.cpp  generate_script.sh  grid.cpp  grid.hpp  grid_datastructure.cpp  heuristics.hpp  main.cpp  main_prog.cpp  merge_block.cpp  output.txt  point_res.cpp  rmse.cpp  split_driver.cpp  top_down_split.cpp  util.hpp  voxelization_grid.cpp
